# maimbot-plugin-mcp

./: .gitignore  README.md  SUMMARY.md  pyproject.toml
docs/: ARCHITECTURE.md  USAGE.md
examples/: simple_mcp_server.py
maimbot_plugin_mcp/: __init__.py  _manifest.json  config.toml  plugin.py
tests/: test_mcp_client.py  test_plugin.py
