[project]
name = "maimbot-plugin-mcp"
version = "0.1.0"
description = "Maimbot plugin for Model Context Protocol (MCP) integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["maimbot_plugin_mcp"]
